# TravelOps

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  supervisord.conf
frontend/: config.js  index.html  vercel.json
frontend/css/: styles.css
frontend/js/: app.js
src/: email_service.py  graph.py  main.py  model_api.py
src/agents/: state.py  utils.py
src/agents/nodes/: Creative.py  Orchestrator.py  Reminder.py  Travel.py
src/auth/: __init__.py  middleware.py  service.py
src/config/: settings.py
src/mcp/: client.py
src/mcp/servers/: comms.py  moodboard.py  search.py  travel.py
tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_mcp_comms.py  test_mcp_travel.py  test_utils.py
